--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,5 @@
-div{
-  span{
-    display: inline-block;
-  }
-}
+@import "variable";
+@import "main";
+@import "configBtn";
+@import "nav";
+@import "systemConfig";
