--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -2,6 +2,11 @@ html,body{
   width: 100%;
   height: 100%;
 }
+body{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 ul,li{
   margin: 0;
   padding: 0;
@@ -10,9 +15,10 @@ li{
   list-style: none;
 }
 .main{
-  margin: 100px 200px;
   border: 1px solid black;
   background: #DFE7F0;
+  width: 800px;
+  height: 538px;
 }
 .main{
   .name{
@@ -46,4 +52,10 @@ li{
       top: 0;
     }
   }
+}
+.a{
+  margin-left: 25%;
+  margin-top: 10%;
+  width: 500px;
+  height: 500px;
 }
