--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,11 @@ html, body {
   width: 100%;
   height: 100%; }
 
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
 ul, li {
   margin: 0;
   padding: 0; }
@@ -10,9 +15,10 @@ li {
   list-style: none; }
 
 .main {
-  margin: 100px 200px;
   border: 1px solid black;
-  background: #DFE7F0; }
+  background: #DFE7F0;
+  width: 800px;
+  height: 538px; }
 
 .main .name {
   height: 40px;
@@ -42,6 +48,12 @@ li {
   position: absolute;
   left: 0;
   top: 0; }
+
+.a {
+  margin-left: 25%;
+  margin-top: 10%;
+  width: 500px;
+  height: 500px; }
 
 .configBtnWrapper .configBtn {
   float: left;
@@ -180,3 +192,36 @@ li {
 
 .dataShowWrapper tr:nth-child(2) {
   width: 100px; }
+
+.meter {
+  width: 598px;
+  height: 400px;
+  padding: 100px 70px;
+  background: #bcdff1;
+  position: relative; }
+  .meter .electricityMeter .idNumber {
+    width: 80px;
+    float: left; }
+  .meter .electricityMeter .elecMeterValue {
+    display: block;
+    float: right;
+    width: 243px; }
+    .meter .electricityMeter .elecMeterValue input {
+      margin-bottom: 25px; }
+  .meter .waterMeter .idNumber {
+    width: 80px;
+    float: left; }
+  .meter .waterMeter .waterMeterValue {
+    display: block;
+    float: right;
+    width: 243px; }
+    .meter .waterMeter .waterMeterValue input {
+      margin-bottom: 25px; }
+  .meter .closeModal {
+    position: absolute;
+    left: 455px;
+    top: 285px;
+    width: 74px;
+    height: 35px; }
+    .meter .closeModal:hover {
+      background: #036cdb; }
